// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pylon Builder - Inputs and Arguments > does not merge same-named nested inputs that differ only by OPTIONAL fields 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Mutation {
  createInvoice(args: CreateInvoiceArgsInput!): CreateInvoice!
  createDelivery(args: CreateDeliveryArgsInput!): CreateDelivery!
}

type CreateInvoice {
  ok: Boolean!
}

type CreateDelivery {
  ok: Boolean!
}

input CreateInvoiceArgsInput {
  input: Input!
}

input Input {
  title: String!
  lines: [PricedLineInput!]!
}

input PricedLineInput {
  description: String!
  quantity: Number
  unitPrice: Number
}

input CreateDeliveryArgsInput {
  input: Input_1!
}

input Input_1 {
  title: String!
  lines: [FreeLineInput!]!
}

input FreeLineInput {
  description: String!
  quantity: Number
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle direct positional arguments 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Mutation {
  updateUser(id: String!, username: String!, age: Number): UpdateUser!
}

type UpdateUser {
  id: String!
  username: String!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle enums shared between input and output 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Query {
  checkStatus(status: Status!): CheckStatus!
}

type CheckStatus {
  id: String!
  status: Status!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON

enum Status {
  ACTIVE
  INACTIVE
}
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle mix of named objects and primitives 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Mutation {
  setup(id: String!, profile: ProfileInput!): Setup!
}

type Setup {
  id: String!
}

input ProfileInput {
  bio: String!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle nested arguments (the standard Pylon pattern) 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Query {
  user(args: UserArgsInput!): User!
}

type Mutation {
  createUser(args: CreateUserArgsInput!): CreateUser!
}

type User {
  username: String!
}

type CreateUser {
  username: String!
}

input UserArgsInput {
  id: String!
}

input CreateUserArgsInput {
  input: CreateUserInput!
}

input CreateUserInput {
  username: String!
  email: String
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle optional enums without warning 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Query {
  users(role: Role): [JSONObject!]!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON

enum Role {
  ADMIN
  USER
}
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle rest parameters with tuple types 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Query {
  search(query: String!, limit: Number): [JSONObject!]!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;

exports[`Pylon Builder - Inputs and Arguments > should handle the "input" parameter pattern 1`] = `
{
  "resolvers": {},
  "typeDefs": "type Mutation {
  createUser(input: CreateUserInput!): CreateUser!
}

type CreateUser {
  username: String!
}

input CreateUserInput {
  username: String!
  email: String!
}

scalar String

scalar ID

scalar Int

scalar Float

scalar Boolean

scalar Number

scalar Any

scalar Void

scalar JSONObject

scalar File

scalar Date

scalar JSON
",
}
`;
